[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolkit-ml-provenance-sbom"
version = "0.1.0"
description = "ML Provenance & SBOM: reproducible manifests for datasets/config/code/weights and integrity checks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Toolkit Contributors" }]
keywords = ["ml", "sbom", "provenance", "integrity", "hash", "reproducibility"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = []

[project.scripts]
toolkit-mlsbom = "toolkit_ml_sbom.cli:main"

[project.optional-dependencies]
signing = [
  "cryptography>=43.0.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "pyright>=1.1.380",
  "cryptography>=43.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["toolkit_ml_sbom"]
omit = ["*/toolkit_ml_sbom/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["toolkit_ml_sbom"]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
toolkit_ml_sbom = ["py.typed"]

